ajout contenu burger

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <div class="BurgerInCategory">
                     <img src="assets/burgers/campagnard.jpg" alt="">
                     <div class="BurgerTitleDescription">
-                        <h3>Classic Cheese</h3>
+                        <h3>Classic cheese</h3>
                         <p>Viande fraiche, double mild cheddar Anglais, oignons confits maison, salade, tomate et pain
                             artisanal</p>
                     </div>
@@ -102,7 +102,7 @@
                                 <p>Solo</p>
                                 <h4>10€</h4>
                             </div>
-                            <button data-info="Classic Cheese"><i
+                            <button data-info="Classic cheese"><i
                                     class="fa-solid fa-plus"></i></button>
                         </div>
                         <div class="burgerPrice">
@@ -110,7 +110,7 @@
                                 <p>Menu</p>
                                 <h4>14€</h4>
                             </div>
-                            <button data-info="Menu Classic Cheese"><i 
+                            <button data-info="Menu Classic cheese"><i 
                                 class="fa-solid fa-plus"></i></button>
                         </div>
                     </div>
@@ -151,14 +151,14 @@
                                 <p>Solo</p>
                                 <h4>11€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Chicken burger"><i class="fa-solid fa-plus"></i></button>
                         </div>
                         <div class="burgerPrice">
                             <div class="SoloOrMenu">
                                 <p>Menu</p>
                                 <h4>15€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Menu Chicken burger"><i class="fa-solid fa-plus"></i></button>
                         </div>
                     </div>
                 </div>
@@ -174,14 +174,14 @@
                                 <p>Solo</p>
                                 <h4>11€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Spicy"><i class="fa-solid fa-plus"></i></button>
                         </div>
                         <div class="burgerPrice">
                             <div class="SoloOrMenu">
                                 <p>Menu</p>
                                 <h4>15€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Menu Spicy"><i class="fa-solid fa-plus"></i></button>
                         </div>
                     </div>
                 </div>
@@ -198,14 +198,14 @@
                                 <p>Solo</p>
                                 <h4>9€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Végéta"><i class="fa-solid fa-plus"></i></button>
                         </div>
                         <div class="burgerPrice">
                             <div class="SoloOrMenu">
                                 <p>Menu</p>
                                 <h4>13€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Menu Végéta"><i class="fa-solid fa-plus"></i></button>
                         </div>
                     </div>
                 </div>
@@ -222,14 +222,14 @@
                                 <p>Solo</p>
                                 <h4>10€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Végéta 2.0"><i class="fa-solid fa-plus"></i></button>
                         </div>
                         <div class="burgerPrice">
                             <div class="SoloOrMenu">
                                 <p>Menu</p>
                                 <h4>14€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Menu Végéta 2.0"><i class="fa-solid fa-plus"></i></button>
                         </div>
                     </div>
                 </div>
@@ -254,14 +254,14 @@
                                 <p>Solo</p>
                                 <h4>12€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Burger Bel Air"><i class="fa-solid fa-plus"></i></button>
                         </div>
                         <div class="burgerPrice">
                             <div class="SoloOrMenu">
                                 <p>Menu</p>
                                 <h4>16€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Menu Burger Bel Air"><i class="fa-solid fa-plus"></i></button>
                         </div>
                     </div>
                 </div>
@@ -277,14 +277,14 @@
                                 <p>Solo</p>
                                 <h4>12€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Comté"><i class="fa-solid fa-plus"></i></button>
                         </div>
                         <div class="burgerPrice">
                             <div class="SoloOrMenu">
                                 <p>Menu</p>
                                 <h4>16€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Menu Comté"><i class="fa-solid fa-plus"></i></button>
                         </div>
                     </div>
                 </div>
@@ -300,14 +300,14 @@
                                 <p>Solo</p>
                                 <h4>12€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="French"><i class="fa-solid fa-plus"></i></button>
                         </div>
                         <div class="burgerPrice">
                             <div class="SoloOrMenu">
                                 <p>Menu</p>
                                 <h4>16€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Menu French"><i class="fa-solid fa-plus"></i></button>
                         </div>
                     </div>
                 </div>
@@ -323,14 +323,14 @@
                                 <p>Solo</p>
                                 <h4>12€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Chèvre"><i class="fa-solid fa-plus"></i></button>
                         </div>
                         <div class="burgerPrice">
                             <div class="SoloOrMenu">
                                 <p>Menu</p>
                                 <h4>16€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Menu Chèvre"><i class="fa-solid fa-plus"></i></button>
                         </div>
                     </div>
                 </div>
@@ -346,14 +346,14 @@
                                 <p>Solo</p>
                                 <h4>12€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Rome Burger"><i class="fa-solid fa-plus"></i></button>
                         </div>
                         <div class="burgerPrice">
                             <div class="SoloOrMenu">
                                 <p>Menu</p>
                                 <h4>16€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Menu Rome Burger"><i class="fa-solid fa-plus"></i></button>
                         </div>
                     </div>
                 </div>
@@ -369,14 +369,14 @@
                                 <p>Solo</p>
                                 <h4>13€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Reblochon"><i class="fa-solid fa-plus"></i></button>
                         </div>
                         <div class="burgerPrice">
                             <div class="SoloOrMenu">
                                 <p>Menu</p>
                                 <h4>17€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Menu Reblochon"><i class="fa-solid fa-plus"></i></button>
                         </div>
                     </div>
                 </div>
@@ -401,14 +401,14 @@
                                 <p>Solo</p>
                                 <h4>14€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Litige"><i class="fa-solid fa-plus"></i></button>
                         </div>
                         <div class="burgerPrice">
                             <div class="SoloOrMenu">
                                 <p>Menu</p>
                                 <h4>18€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Menu Litige"><i class="fa-solid fa-plus"></i></button>
                         </div>
                     </div>
                 </div>
@@ -424,14 +424,14 @@
                                 <p>Solo</p>
                                 <h4>14€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Pulled Pork"><i class="fa-solid fa-plus"></i></button>
                         </div>
                         <div class="burgerPrice">
                             <div class="SoloOrMenu">
                                 <p>Menu</p>
                                 <h4>18€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Menu Pulled Pork"><i class="fa-solid fa-plus"></i></button>
                         </div>
                     </div>
                 </div>
@@ -448,14 +448,14 @@
                                 <p>Solo</p>
                                 <h4>14€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Campagnard"><i class="fa-solid fa-plus"></i></button>
                         </div>
                         <div class="burgerPrice">
                             <div class="SoloOrMenu">
                                 <p>Menu</p>
                                 <h4>18€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Menu Campagnard"><i class="fa-solid fa-plus"></i></button>
                         </div>
                     </div>
                 </div>
@@ -472,14 +472,14 @@
                                 <p>Solo</p>
                                 <h4>14€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Abondance"><i class="fa-solid fa-plus"></i></button>
                         </div>
                         <div class="burgerPrice">
                             <div class="SoloOrMenu">
                                 <p>Menu</p>
                                 <h4>18€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Menu Abondance"><i class="fa-solid fa-plus"></i></button>
                         </div>
                     </div>
                 </div>
@@ -496,14 +496,14 @@
                                 <p>Solo</p>
                                 <h4>12€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Toast N Bel R"><i class="fa-solid fa-plus"></i></button>
                         </div>
                         <div class="burgerPrice">
                             <div class="SoloOrMenu">
                                 <p>Menu</p>
                                 <h4>16€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Menu Toast N Bel R"><i class="fa-solid fa-plus"></i></button>
                         </div>
                     </div>
                 </div>
@@ -520,14 +520,14 @@
                                 <p>Solo</p>
                                 <h4>21€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Toast Air"><i class="fa-solid fa-plus"></i></button>
                         </div>
                         <div class="burgerPrice">
                             <div class="SoloOrMenu">
                                 <p>Menu</p>
                                 <h4>25€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Menu Toast Air"><i class="fa-solid fa-plus"></i></button>
                         </div>
                     </div>
                 </div>
@@ -551,14 +551,14 @@
                                 <p>Solo</p>
                                 <h4>10€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Menu Classic cheese"><i class="fa-solid fa-plus"></i></button>
                         </div>
                         <div class="burgerPrice">
                             <div class="SoloOrMenu">
                                 <p>Menu</p>
                                 <h4>14€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Menu Classic cheese"><i class="fa-solid fa-plus"></i></button>
                         </div>
                     </div>
                 </div>
@@ -582,14 +582,14 @@
                                 <p>Solo</p>
                                 <h4>10€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Menu Classic cheese"><i class="fa-solid fa-plus"></i></button>
                         </div>
                         <div class="burgerPrice">
                             <div class="SoloOrMenu">
                                 <p>Menu</p>
                                 <h4>14€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Menu Classic cheese"><i class="fa-solid fa-plus"></i></button>
                         </div>
                     </div>
                 </div>
@@ -613,7 +613,7 @@
                                 <p>Solo</p>
                                 <h4>10€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Menu Classic cheese"><i class="fa-solid fa-plus"></i></button>
                         </div>
                         <div class="burgerPrice">
                             <div class="SoloOrMenu">
