ajout contenu burger

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!--Font awesome-->
     <script src="https://kit.fontawesome.com/ddd8de2320.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.2.0/dist/confetti.browser.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -78,7 +79,7 @@
                 <input type="text" id="menu" placeholder="Sélectionne ton sandwitch ou écris directement ta commande" required></input>
                 <i id="deleteValueInputMenu" class="fa-regular fa-trash-can"></i>
             </div>
-            <button class="validBtn" id="valid">ok</button>
+            <button class="validBtn shake" id="valid">ok</button>
             <button class="validBtn" id="voirCommande">Voir les commandes</button>
             <ul id="commande" style="color: aliceblue;"></ul>
         </section>
