--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!--Font awesome-->
     <script src="https://kit.fontawesome.com/ddd8de2320.js" crossorigin="anonymous"></script>
+    <!-- confetti -->
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.2.0/dist/confetti.browser.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
