ajout plusieurs burgers

--- a/index.html
+++ b/index.html
@@ -906,14 +906,14 @@
                                 <p>Solo</p>
                                 <h4>10€</h4>
                             </div>
-                            <button data-info="Tacos chicken"><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Tacos berliner"><i class="fa-solid fa-plus"></i></button>
                         </div>
                         <div class="burgerPrice">
                             <div class="SoloOrMenu">
                                 <p>Menu</p>
                                 <h4>11.50€</h4>
                             </div>
-                            <button data-info="Menu Tacos chicken"><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Menu Tacos berliner"><i class="fa-solid fa-plus"></i></button>
                         </div>
                     </div>
                 </div>
