ajout plusieurs burgers

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
             </div>
             <div class="allBurgersCategory">
                 <div class="BurgerInCategory">
-                    <img src="assets/burgers/campagnard.jpg" alt="">
+                    <img src="assets/burgers/burgerBelAir.png" alt="">
                     <div class="BurgerTitleDescription">
                         <h3>Burger Bel Air</h3>
                         <p>Viande, fromage à raclette de montagne, lard fumé, oignons confits, tomates, salade </p>
@@ -462,7 +462,7 @@
                     </div>
                 </div>
                 <div class="BurgerInCategory">
-                    <img src="assets/burgers/campagnard.jpg" alt="">
+                    <img src="assets/burgers/abondance.png" alt="">
                     <div class="BurgerTitleDescription">
                         <h3>Abondance</h3>
                         <p>Fromage abondance, steack, champignons, mayonaise truffée, éclat de pistache, salade, tomates
@@ -826,7 +826,7 @@
             </div>
             <div class="allBurgersCategory">
                 <div class="BurgerInCategory">
-                    <img src="assets/burgers/campagnard.jpg" alt="">
+                    <img src="assets/burgers/tacos.png" alt="">
                     <div class="BurgerTitleDescription">
                         <h3>Tacos chicken</h3>
                         <p>Galette tortillas, sauce cheddar, poulet pané frais, frites, sauce biggy ou alger</p>
@@ -849,7 +849,7 @@
                     </div>
                 </div>
                 <div class="BurgerInCategory">
-                    <img src="assets/burgers/campagnard.jpg" alt="">
+                    <img src="assets/burgers/tacos.png" alt="">
                     <div class="BurgerTitleDescription">
                         <h3>Tacos cordon</h3>
                         <p>Galette tortillas, sauce cheddar, cordon bleu de poulet, bacon, frites, sauce biggy ou alger</p>
@@ -872,7 +872,7 @@
                     </div>
                 </div>
                 <div class="BurgerInCategory">
-                    <img src="assets/burgers/campagnard.jpg" alt="">
+                    <img src="assets/burgers/tacos.png" alt="">
                     <div class="BurgerTitleDescription">
                         <h3>Tacos steak</h3>
                         <p>Galette tortillas, sauce cheddar, steak boeuf, frites, sauce biggy ou alger</p>
@@ -895,7 +895,7 @@
                     </div>
                 </div>
                 <div class="BurgerInCategory">
-                    <img src="assets/burgers/campagnard.jpg" alt="">
+                    <img src="assets/burgers/tacos.png" alt="">
                     <div class="BurgerTitleDescription">
                         <h3>Tacos berliner</h3>
                         <p>Galette tortillas, poulet kebab, cheddar, choux rouge, petits légumes, oignons rouge, sauce Pitta, frites</p>
