ajout numéro tel

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         </section>
         <section id="sectionDice">
             <h1>Qui va appeler ?</h1>
+            <h2 style="color:#aaaaaa">06.23.12.31.09</h2>
             <div class="containerDice">
                 <div class="dice">
                     <div class="face front"></div>
