--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
         </section>
         <section id="sectionDice">
-            <h1>Qui va appeler ?</h1>
+            <h1 id="quiVaAppeler">Qui va appeler ?</h1>
             <h2 style="color:#aaaaaa">06.23.12.31.09</h2>
             <div class="containerDice">
                 <div class="dice">
