--- a/index.html
+++ b/index.html
@@ -361,6 +361,11 @@
                     </div>
                 </div>
                 <div class="BurgerInCategory">
+                    <div class="arrete">
+                        <p>
+                            Reviendra bientôt...
+                        </p>
+                    </div>
                     <img src="assets/burgers/campagnard.jpg" alt="">
                     <div class="BurgerTitleDescription">
                         <h3>Reblochon</h3>
@@ -827,6 +832,11 @@
             </div>
             <div class="allBurgersCategory">
                 <div class="BurgerInCategory">
+                    <div class="arrete">
+                        <p>
+                            Annulé pour le moment...
+                        </p>
+                    </div>
                     <img src="assets/burgers/tacos.png" alt="">
                     <div class="BurgerTitleDescription">
                         <h3>Tacos chicken</h3>
@@ -850,6 +860,11 @@
                     </div>
                 </div>
                 <div class="BurgerInCategory">
+                    <div class="arrete">
+                        <p>
+                            Annulé pour le moment...
+                        </p>
+                    </div>
                     <img src="assets/burgers/tacos.png" alt="">
                     <div class="BurgerTitleDescription">
                         <h3>Tacos cordon</h3>
@@ -873,6 +888,11 @@
                     </div>
                 </div>
                 <div class="BurgerInCategory">
+                    <div class="arrete">
+                        <p>
+                            Annulé pour le moment...
+                        </p>
+                    </div>
                     <img src="assets/burgers/tacos.png" alt="">
                     <div class="BurgerTitleDescription">
                         <h3>Tacos steak</h3>
@@ -896,6 +916,11 @@
                     </div>
                 </div>
                 <div class="BurgerInCategory">
+                    <div class="arrete">
+                        <p>
+                            Annulé pour le moment...
+                        </p>
+                    </div>
                     <img src="assets/burgers/tacos.png" alt="">
                     <div class="BurgerTitleDescription">
                         <h3>Tacos berliner</h3>
