--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
             <h1 id="ecrisCommande">Écris ta commande !</h1>
             <input type="text" id="username" placeholder="Nom" required>
             <div id="inputMenuAndbtnDelete">
-                <input type="text" id="menu" placeholder="Sélectionne ton sandwitch ou écris directement ta commande" required></input>
+                <input type="text" id="menu" placeholder="Sélectionne ton sandwitch ou écris directement ta commande"
+                    required></input>
                 <i id="deleteValueInputMenu" class="fa-regular fa-trash-can"></i>
             </div>
             <button class="validBtn shake" id="valid">ok</button>
@@ -105,16 +106,14 @@
                                 <p>Solo</p>
                                 <h4>10€</h4>
                             </div>
-                            <button data-info="Classic cheese"><i
-                                    class="fa-solid fa-plus"></i></button>
+                            <button data-info="Classic cheese"><i class="fa-solid fa-plus"></i></button>
                         </div>
                         <div class="burgerPrice">
                             <div class="SoloOrMenu">
                                 <p>Menu</p>
                                 <h4>14€</h4>
                             </div>
-                            <button data-info="Menu Classic cheese"><i 
-                                class="fa-solid fa-plus"></i></button>
+                            <button data-info="Menu Classic cheese"><i class="fa-solid fa-plus"></i></button>
                         </div>
                     </div>
                 </div>
@@ -142,7 +141,7 @@
                     </div>
                 </div>
                 <div class="BurgerInCategory">
-                    <img src="assets/burgers/campagnard.jpg" alt="">
+                    <img src="assets/burgers/chicken.jpg" alt="">
                     <div class="BurgerTitleDescription">
                         <h3>Chicken burger</h3>
                         <p>Aiguillettes de poulet pané, double mild cheddar Anglais, oignons confits, salade, tomates
@@ -166,7 +165,7 @@
                     </div>
                 </div>
                 <div class="BurgerInCategory">
-                    <img src="assets/burgers/campagnard.jpg" alt="">
+                    <img src="assets/burgers/spicy.jpg" alt="">
                     <div class="BurgerTitleDescription">
                         <h3>Spicy</h3>
                         <p>Piment, steak, double mild cheddar Anglais, oignons frits confits, salade, tomates</p>
@@ -189,7 +188,7 @@
                     </div>
                 </div>
                 <div class="BurgerInCategory">
-                    <img src="assets/burgers/campagnard.jpg" alt="">
+                    <img src="assets/burgers/vegeta20.jpg" alt="">
                     <div class="BurgerTitleDescription">
                         <h3>Végéta</h3>
                         <p>Sans viande, mozzarella, galette de pomme de terre, oignons confits, huile d'olive, ail en
@@ -213,7 +212,7 @@
                     </div>
                 </div>
                 <div class="BurgerInCategory">
-                    <img src="assets/burgers/campagnard.jpg" alt="">
+                    <img src="assets/burgers/vegeta20.jpg" alt="">
                     <div class="BurgerTitleDescription">
                         <h3>Végéta 2.0</h3>
                         <p>Sans viande, mozzarella, galette de pomme de terre, avocat, balsamique, oignons confits,
@@ -269,7 +268,7 @@
                     </div>
                 </div>
                 <div class="BurgerInCategory">
-                    <img src="assets/burgers/campagnard.jpg" alt="">
+                    <img src="assets/burgers/comte.jpg" alt="">
                     <div class="BurgerTitleDescription">
                         <h3>Comté</h3>
                         <p>Viande, comté, oignons confits, tomates, salade</p>
@@ -338,7 +337,7 @@
                     </div>
                 </div>
                 <div class="BurgerInCategory">
-                    <img src="assets/burgers/campagnard.jpg" alt="">
+                    <img src="assets/burgers/romeBurger.jpg" alt="">
                     <div class="BurgerTitleDescription">
                         <h3>Rome Burger</h3>
                         <p>Mozzarella fondante, steack, pesto verde, salade, tomates séchées</p>
@@ -366,7 +365,7 @@
                             Reviendra bientôt...
                         </p>
                     </div>
-                    <img src="assets/burgers/campagnard.jpg" alt="">
+                    <img src="assets/burgers/reblochon2.jpg" alt="">
                     <div class="BurgerTitleDescription">
                         <h3>Reblochon</h3>
                         <p>Reblochon, steack, galette de pomme de terre, lard fumé, oignons confits</p>
@@ -397,7 +396,7 @@
             </div>
             <div class="allBurgersCategory">
                 <div class="BurgerInCategory">
-                    <img src="assets/burgers/campagnard.jpg" alt="">
+                    <img src="assets/burgers/litige.jpg" alt="">
                     <div class="BurgerTitleDescription">
                         <h3>Litige</h3>
                         <p>Steack, avocat, mozzarella, crème de balsamique, oignons crispy, salade, tomates, mayo
@@ -421,7 +420,7 @@
                     </div>
                 </div>
                 <div class="BurgerInCategory">
-                    <img src="assets/burgers/campagnard.jpg" alt="">
+                    <img src="assets/burgers/pulledPork.jpg" alt="">
                     <div class="BurgerTitleDescription">
                         <h3>Pulled Pork</h3>
                         <p>Effiloché de proc, choux rouge croquant, cheddar, roquette, tomates, sauce sweet thaï</p>
@@ -492,7 +491,7 @@
                     </div>
                 </div>
                 <div class="BurgerInCategory">
-                    <img src="assets/burgers/campagnard.jpg" alt="">
+                    <img src="assets/burgers/toast.jpg" alt="">
                     <div class="BurgerTitleDescription">
                         <h3>Toast N Bel R</h3>
                         <p>Bun grillé, cheddar poivre, sauces au poivre, steack boeuf, oignons crispy, lard fumé,
@@ -548,7 +547,7 @@
             </div>
             <div class="allBurgersCategory">
                 <div class="BurgerInCategory">
-                    <img src="assets/burgers/campagnard.jpg" alt="">
+                    <img src="assets/burgers/smashBaconClassic.jpg" alt="">
                     <div class="BurgerTitleDescription">
                         <h3>Smash classic</h3>
                         <p>Patty 125gr smashed, double mild cheddar, oignons rouges crus, ketchup, mayonaise</p>
@@ -571,10 +570,11 @@
                     </div>
                 </div>
                 <div class="BurgerInCategory">
-                    <img src="assets/burgers/campagnard.jpg" alt="">
+                    <img src="assets/burgers/smashBacon.jpg" alt="">
                     <div class="BurgerTitleDescription">
                         <h3>Smash bacon</h3>
-                        <p>Patty 125gr smashed, lard fumé, double mild cheddar, oignons rouge crus et crispy, ketchup, mayonaise</p>
+                        <p>Patty 125gr smashed, lard fumé, double mild cheddar, oignons rouge crus et crispy, ketchup,
+                            mayonaise</p>
                     </div>
                     <div class="AllPricesInCategory">
                         <div class="burgerPrice">
@@ -594,10 +594,11 @@
                     </div>
                 </div>
                 <div class="BurgerInCategory">
-                    <img src="assets/burgers/campagnard.jpg" alt="">
+                    <img src="assets/burgers/smashBacon.jpg" alt="">
                     <div class="BurgerTitleDescription">
                         <h3>Smash classic 2.0</h3>
-                        <p>Bun toasté au beurre, Patty 125gr smashed, oignons blancs paprika, sauce burger, double mild cheddar</p>
+                        <p>Bun toasté au beurre, Patty 125gr smashed, oignons blancs paprika, sauce burger, double mild
+                            cheddar</p>
                     </div>
                     <div class="AllPricesInCategory">
                         <div class="burgerPrice">
@@ -617,10 +618,11 @@
                     </div>
                 </div>
                 <div class="BurgerInCategory">
-                    <img src="assets/burgers/campagnard.jpg" alt="">
+                    <img src="assets/burgers/smashBacon.jpg" alt="">
                     <div class="BurgerTitleDescription">
                         <h3>Smash bacon 2.0</h3>
-                        <p>Bun toasté au beurre, patty 125gr smashed, oignons blancs rouges crispy au paprika, double mild cheddar, double lard fumé, sauce bacon</p>
+                        <p>Bun toasté au beurre, patty 125gr smashed, oignons blancs rouges crispy au paprika, double
+                            mild cheddar, double lard fumé, sauce bacon</p>
                     </div>
                     <div class="AllPricesInCategory">
                         <div class="burgerPrice">
@@ -786,7 +788,7 @@
                     </div>
                 </div>
                 <div class="BurgerInCategory">
-                    <img src="assets/burgers/campagnard.jpg" alt="">
+                    <img src="assets/burgers/miniWrap.jpg" alt="">
                     <div class="BurgerTitleDescription">
                         <h3>Mini wrap</h3>
                         <p>Galette wrap, poulet pané frais, cheddar, sauce biggy, oignons crispy</p>
@@ -801,10 +803,11 @@
                     </div>
                 </div>
                 <div class="BurgerInCategory">
-                    <img src="assets/burgers/campagnard.jpg" alt="">
+                    <img src="assets/burgers/salade.jpg" alt="">
                     <div class="BurgerTitleDescription">
                         <h3>Salade césar</h3>
-                        <p>Mélange de salade, tomate cerise, croutons, parmiggiano, poulet pané frais, creme balsamique, oignons crus</p>
+                        <p>Mélange de salade, tomate cerise, croutons, parmiggiano, poulet pané frais, creme balsamique,
+                            oignons crus</p>
                     </div>
                     <div class="AllPricesInCategory">
                         <div class="burgerPrice">
@@ -868,7 +871,8 @@
                     <img src="assets/burgers/tacos.png" alt="">
                     <div class="BurgerTitleDescription">
                         <h3>Tacos cordon</h3>
-                        <p>Galette tortillas, sauce cheddar, cordon bleu de poulet, bacon, frites, sauce biggy ou alger</p>
+                        <p>Galette tortillas, sauce cheddar, cordon bleu de poulet, bacon, frites, sauce biggy ou alger
+                        </p>
                     </div>
                     <div class="AllPricesInCategory">
                         <div class="burgerPrice">
@@ -924,7 +928,8 @@
                     <img src="assets/burgers/tacos.png" alt="">
                     <div class="BurgerTitleDescription">
                         <h3>Tacos berliner</h3>
-                        <p>Galette tortillas, poulet kebab, cheddar, choux rouge, petits légumes, oignons rouge, sauce Pitta, frites</p>
+                        <p>Galette tortillas, poulet kebab, cheddar, choux rouge, petits légumes, oignons rouge, sauce
+                            Pitta, frites</p>
                     </div>
                     <div class="AllPricesInCategory">
                         <div class="burgerPrice">
@@ -951,29 +956,7 @@
                 <span class="h2-line"></span>
             </div>
             <div class="allBurgersCategory">
-                <div class="BurgerInCategory">
-                    <img src="assets/burgers/campagnard.jpg" alt="">
-                    <div class="BurgerTitleDescription">
-                        <h3>Classic Cheese</h3>
-                        <p>Salade, tomates, oignons</p>
-                    </div>
-                    <div class="AllPricesInCategory">
-                        <div class="burgerPrice">
-                            <div class="SoloOrMenu">
-                                <p>Solo</p>
-                                <h4>10€</h4>
-                            </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
-                        </div>
-                        <div class="burgerPrice">
-                            <div class="SoloOrMenu">
-                                <p>Menu</p>
-                                <h4>14€</h4>
-                            </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
-                        </div>
-                    </div>
-                </div>
+                <p style="color: #ffffff; margin: 50px;">A venir...</p>
             </div>
         </section>
         <section class="typesBurgers" id="desserts">
@@ -982,29 +965,7 @@
                 <span class="h2-line"></span>
             </div>
             <div class="allBurgersCategory">
-                <div class="BurgerInCategory">
-                    <img src="assets/burgers/campagnard.jpg" alt="">
-                    <div class="BurgerTitleDescription">
-                        <h3>Classic Cheese</h3>
-                        <p>Salade, tomates, oignons</p>
-                    </div>
-                    <div class="AllPricesInCategory">
-                        <div class="burgerPrice">
-                            <div class="SoloOrMenu">
-                                <p>Solo</p>
-                                <h4>10€</h4>
-                            </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
-                        </div>
-                        <div class="burgerPrice">
-                            <div class="SoloOrMenu">
-                                <p>Menu</p>
-                                <h4>14€</h4>
-                            </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
-                        </div>
-                    </div>
-                </div>
+                <p style="color: #ffffff; margin: 50px;">A venir...</p>
             </div>
         </section>
     </div>
