--- a/index.html
+++ b/index.html
@@ -360,11 +360,11 @@
                     </div>
                 </div>
                 <div class="BurgerInCategory">
-                    <div class="arrete">
+                    <!-- <div class="arrete">
                         <p>
                             Reviendra bientôt...
                         </p>
-                    </div>
+                    </div> -->
                     <img src="assets/burgers/reblochon2.jpg" alt="">
                     <div class="BurgerTitleDescription">
                         <h3>Reblochon</h3>
